...
            android:id="@+id/welcome_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_register" />

        <Button
            android:id="@+id/welcome_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login" />
        
        <TextView
            android:id="@+id/welcome_privacy_info"
...
