...
	<string name="error_register_no_email">Please enter your email address</string>
	<string name="error_register_password">Your password must be at least %1$d or more characters</string>
	<string name="error_register_password_no_match">Your passwords don\'t match</string>
	<string name="error_register_no_firstname">Please enter your first name</string>
	<string name="error_register_no_lastname">Please enter your last name</string>
	<string name="error_register_no_phoneno">Please enter your phone number</string>
	<string name="error_register_no_username">Please enter a username</string>
	<string name="error_register_username_spaces">Your username cannot contain spaces</string>
	<string name="error_resource_app_not_found">You don\'t seem to have an app installed to open \'%1$s\'. Please install an app capable of opening this type of file.</string>
	<string name="error_resource_not_found">File: \'%1$s\' not found.</string>
    <string name="error_preloading_accounts">Error preloading accounts from CSV file</string>

    <string name="error_insufficient_storage_available">Insufficient storage available</string>
...
