<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:orientation="vertical"
					android:id="@+id/questionresponses"
					android:layout_margin="10dp">
		</LinearLayout>
</LinearLayout>